fix: fix topbar z-index issue over modal

--- a/app/assets/stylesheets/interfaces/canary/topbar.scss
+++ b/app/assets/stylesheets/interfaces/canary/topbar.scss
@@ -1,7 +1,7 @@
 .topbar {
   line-height: 51px;
   position: relative;
-  z-index: 1001;
+  z-index: 900;
   overflow: visible;
   height: 51px;
   margin: 0 auto;
